fix overflow

--- a/css/geral.css
+++ b/css/geral.css
@@ -45,7 +45,6 @@ body {
    font-family: "Cabinet Grotesk", "Lexend", sans-serif;
    background-color: var(--darkbg);
    position: relative;
-   overflow: hidden;
 }
 
 img {
